<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="large_text">Large Text</string>
    
    <!-- Button Labels -->
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="buttton_9">9</string>
    <string name="button_open_bracket">(</string>
    <string name="button_close_bracket">)</string>
    <string name="button_decimal_dot">.</string>
    <string name="button_exp">exp</string>
    <string name="button_equals">=</string>
    <string name="button_sign">±</string>
    <string name="button_division">/</string>
    <string name="button_multiplication">*</string>
    <string name="button_minus">-</string>
	<string name="button_addition">+</string>
	<string name="button_sqrt">$</string>
	<string name="button_percentage">%</string>
	<string name="button_reciproc">1/x</string>
	<string name="button_go">Go</string>
	<string name="button_x">X</string>
	<string name="button_y">Y</string>
	<string name="button_z">Z</string>
	<string name="button_clear">Clear</string>
	<string name="button_calculate">Calculate</string>
	<string name="button_backup_data">Backup</string>
	<string name="button_show_data">Show Equation</string>
	<string name="button_retrun">Back</string>
	
	<string name="action_exit">Exit</string>
	<string name="action_show_expressions">Show Stored Expression</string>
	<string name="action_reset_database">Reset Database</string>
	<string name="action_view_storage">View Additional Controls</string>
	
	<string name="menu_exit">Exit</string>
	
</resources>
