<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<GridLayout
	    android:id="@+id/gridButtons"
	    android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:columnWidth="90dp"
	    android:columnCount="3"
	    android:rowCount="4" 
	    android:verticalSpacing="10dp"
    	android:horizontalSpacing="10dp"
    	android:stretchMode="columnWidth">

    <Button
        android:id="@+id/button_clear"
        android:layout_height="40dp"
        android:onClick="clearDisplay"
        android:text="@string/button_clear" />
    
    <Button
        android:id="@+id/button_close_bracket"
        android:layout_height="40dp"
        android:text="@string/button_open_bracket" /> 
    
    <Button
        android:id="@+id/button_open_bracket"
        android:layout_height="40dp"
        android:text="@string/button_close_bracket" />
	    	    
    <Button
        android:id="@+id/button7"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_7" />
    
    <Button
        android:id="@+id/button8"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_8" />
    
    <Button
        android:id="@+id/button9"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/buttton_9" />
    
    <Button
        android:id="@+id/button4"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_4" />
    
    <Button
        android:id="@+id/button5"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_5" />
    
    <Button
        android:id="@+id/button6"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_6" />    
    
    <Button
        android:id="@+id/button1"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_1" />
    
    <Button
        android:id="@+id/button2"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_2" />
    
    <Button
        android:id="@+id/button3"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_3" />

    <Button
        android:id="@+id/buttonhidden"
        android:layout_height="40dp"
        android:visibility="gone"/>    
    
    <Button
        android:id="@+id/button0"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_0" />
        


    
   	</GridLayout>
</RelativeLayout>
