<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<GridLayout
	    android:id="@+id/gridFunctions"
	    android:layout_width="wrap_content" 
    	android:layout_height="wrap_content"
    	android:columnWidth="95dp"
	    android:columnCount="2"
	    android:rowCount="4" 
	    android:verticalSpacing="10dp"
    	android:horizontalSpacing="10dp"
    	android:stretchMode="columnWidth">
    
	<Button
        android:id="@+id/button_sign"
        android:layout_height="40dp"
        android:text="@string/button_sign" />
	
	<Button
        android:id="@+id/button_x"
        android:layout_height="40dp"
        android:enabled="false"
        android:text="@string/button_x" />
	
	<Button
        android:id="@+id/button_division"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_division" />
	
	<Button
        android:id="@+id/button_y"
        android:layout_height="40dp"
        android:enabled="false"
        android:text="@string/button_y" />
	
	<Button
        android:id="@+id/button_multiplication"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_multiplication" />
	
	<Button
        android:id="@+id/button_percentage"
        android:layout_height="40dp"
         android:enabled="false"
        android:text="@string/button_percentage" />

	<Button
        android:id="@+id/button_minus"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_minus" />
	
	<Button
        android:id="@+id/button_decimal_dot"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_decimal_dot" />
	
	<Button
        android:id="@+id/button_addition"
        android:layout_height="40dp"
        android:onClick="updateDisplay"
        android:text="@string/button_addition" />
	
	<Button
        android:id="@+id/button_equals"
        android:layout_height="40dp"
        android:textColor="@drawable/keypad"
        android:text="@string/button_go" />
	    
   	</GridLayout>
</RelativeLayout>